[tool.poetry]
name = "repl_python3_fetxhbot"
version = "0.1.0"
description = ""
authors = ["realtalishaw <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bitarray = "^2.3.1"
mmh3 = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
